[gd_scene load_steps=3 format=3 uid="uid://oeg85s83rld8"]

[ext_resource type="Script" uid="uid://dq3a64bxipmnh" path="res://Scripts/EggPanel.gd" id="1_6os55"]
[ext_resource type="PackedScene" uid="uid://5s174ha0wbuc" path="res://Scenes/EggPreview3D.tscn" id="2_6pwwq"]

[node name="EggPanel" type="PanelContainer"]
offset_right = 560.0
offset_bottom = 512.0
script = ExtResource("1_6os55")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="EggPreview" type="SubViewportContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/EggPreview"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="EggPreview3D" parent="HBoxContainer/EggPreview/SubViewport" instance=ExtResource("2_6pwwq")]

[node name="Hatch1Button" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HatchMaxButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AutoHatchButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SelectButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
